# libxmlb

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  NEWS  README.md  RELEASE  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: main.yml  scorecard.yml
contrib/: libxmlb.spec.in  mingw64.cross  reformat-code.py  setup
contrib/ci/: Dockerfile-debian  Dockerfile-fedora  Dockerfile-fedora-w64  abidiff.suppr  build-debian.sh  build-fedora-w64.sh  build-fedora.sh  build_and_test.sh  check-abi  check-abi.sh  check-license.py  check-null-false-returns.py
data/: libxmlb.test.in  meson.build  test.desktop  test.quirk  test.xml.xz  test.xml.zstd
data/fuzzing-src/: appdata.xml
data/fuzzing-xpath/: attr.txt  down-then-up-then-down.txt  or.txt  search.txt  simple.txt  text.txt
docs/: fuzzing.md  libxmlb-docs.xml  libxmlb.types  meson.build
src/: gen-def-from-map.py  generate-version-script.py  libxmlb.map  meson.build  xb-arena.c  xb-arena.h  xb-builder-fixup-private.h  xb-builder-fixup.c  xb-builder-fixup.h  xb-builder-import-private.h  xb-builder-import.c  xb-builder-import.h  xb-builder-node-private.h  xb-builder-node.c  xb-builder-node.h  xb-builder-source-ctx-private.h  xb-builder-source-ctx.c  xb-builder-source-ctx.h  xb-builder-source-private.h  xb-builder-source.c  xb-builder-source.h  xb-builder.c  xb-builder.h  xb-common-private.h  xb-common.c  xb-common.h  xb-compile-glib-2-62.h  xb-compile.h  xb-lzma-decompressor.c  xb-lzma-decompressor.h  xb-machine-private.h  xb-machine.c  xb-machine.h  xb-node-private.h  xb-node-query.c  xb-node-query.h  xb-node-silo.h  xb-node.c  xb-node.h  xb-opcode-private.h  (+37 more)
src/libxmlb/: meson.build
